--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,16 @@
 body {
     font-family: DIN2014;
     margin: 0;
+    line-height: 1.4;
 }
 
 :root {
         --primary-color-main:hsl(208.7, 74.19%, 12.16%);
         --secondary-color-main:hsl(208.31, 63.12%, 27.65%);
+        --secondary-color-body:hsl(208.31, 62%, 19%);
         --primary-color-link:hsl(202.73, 61.68%, 58.04%);
         --light-text:hsl(0, 0%, 100%);
+        --dark-text:hsl(0, 0%, 100%);
         
     }
 
