--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ nav:popover-open {
 
 main {
     font-family: DIN 2014;
-    color: var(--light-text);
+    color: var(--dark-text);
     background-color: var(--primary-color-main);
     padding-inline: 1%;
 }
