--- a/styles.css
+++ b/styles.css
@@ -297,11 +297,11 @@ details {
 
 
 .button1{
-    border: 10px solid var(--primary-color-link);
+    border: 10px solid var(--secondary-color-body);
     border-radius: 20px;
     text-decoration: none;
     color: var(--dark-text);
-    background-color: var(--primary-color-link);
+    background-color: var(--secondary-color-body);
 }
 
 .button2{
